<resources>
    <string name="app_name">Quick Shopping List</string>
    <string name="shopping_list">Quick Shopping List</string>
    <string name="quick_shopping_list">Quick Shopping List</string>
    <string name="enter_an_item">Enter an Item</string>
    <string name="carted_item">(Carted Items)</string>
    <string name="last_updated_on_holder">Last updated on %s</string>
    <string name="empty_shopping_item">Please enter shopping item</string>
    <string name="valid_shopping_item">Please enter a valid item</string>
    <string name="something_went_wrong">Something went wrong.</string>
    <string name="share">Share</string>
    <string name="help">Help</string>
    <string name="story">Story</string>
    <string name="about">About</string>
    <string name="contact">Contact us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="setting">Setting</string>
    <string name="share_msg">Here is our shopping list. Manage items or use it for shopping. https://quickshoppinglist.com/?id=%s</string>
</resources>